# pymyhondaplus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  USAGE.md  pyproject.toml  test_cli_acceptance.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  translation.yml  vehicle_compatibility.yml
.github/workflows/: test.yml
src/pymyhondaplus/: __init__.py  __main__.py  api.py  auth.py  cli.py  http.py  storage.py  translations.py
tests/: conftest.py  test_api_client.py  test_auth.py  test_capability_check.py  test_cli_behavior.py  test_cli_capabilities.py  test_cli_trip_stats.py  test_device_key.py  test_geofence.py  test_parse_ev_status.py  test_schedules.py  test_storage.py  test_thread_safety.py  test_translations.py  test_trip_stats.py  test_vehicle.py
