[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymyhondaplus"
version = "5.6.0"
description = "Unofficial Python client for the Honda Connect Europe (My Honda+) API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Enrico Battocchi" },
]
keywords = ["honda", "honda-e", "my-honda-plus", "home-assistant", "ev"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28",
    "cryptography>=41.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0"]
completion = ["argcomplete>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.10", "types-requests>=2.31"]

[project.urls]
Homepage = "https://github.com/enricobattocchi/pymyhondaplus"
Repository = "https://github.com/enricobattocchi/pymyhondaplus"
Issues = "https://github.com/enricobattocchi/pymyhondaplus/issues"
Changelog = "https://github.com/enricobattocchi/pymyhondaplus/blob/main/CHANGELOG.md"

[project.scripts]
pymyhondaplus = "pymyhondaplus.cli:_main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
